# rdr2_screenshot_converter

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
core/: Cargo.toml  README.md
core/src/: buffer.rs  console.rs  files.rs  lib.rs  meta.rs
gui/: Cargo.toml  README.md
gui/src/: lib.rs  main.rs
src/: buffertrim.rs  console.rs  lib.rs  main.rs
