[package]
name = "rdr2_screenshot_converter"
version = "1.0.0"
authors = ["Timofey Gelazoniya <contact@zeldon.ru>"]
description = "Convert and save screenshots from rdr2 photo mode to JPEG format"
readme = "README.md"
keywords = ["rdr2", "screenshot", "screenshots", "convert", "jpeg"]
license = "MIT"
edition = "2018"
build = "build/build.rs"

[dependencies]
dirs = "3.0.1"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.0", features = ["termination"] }
serde_json = "1.0"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3"
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi", "processenv"]

[build-dependencies]
embed-resource = "1.6"