[package]
authors = ["Timofey Gelazoniya <contact@zeldon.ru>"]
build = "build/build.rs"
description = "Convert and save screenshots from rdr2 photo mode to JPEG format"
edition = "2021"
keywords = ["rdr2", "screenshot", "screenshots", "convert", "jpeg"]
license = "MIT"
name = "cli"
readme = "README.md"
version = "1.1.0"

[dependencies]
colored = "2.0.0"
core = {path = "../core"}
ctrlc = {version = "3.0", features = ["termination"]}
dirs = "4.0.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[target.'cfg(target_os="windows")'.dependencies.winapi]
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi", "processenv"]
version = "0.3"

[build-dependencies]
embed-resource = "1.6"
