[package]
authors = ["Timofey Gelazoniya <contact@zeldon.ru>"]
build = "build/build.rs"
description = "Convert and save screenshots from rdr2 photo mode to JPEG format"
edition = "2021"
keywords = ["rdr2", "screenshot", "screenshots", "convert", "jpeg"]
license = "MIT"
name = "cli"
readme = "README.md"
version = "1.1.0"

[dependencies]
colored = "2.0.0"
core = {path = "../core"}
dirs = "4.0.0"
serde_json = "1.0"

[build-dependencies]
embed-resource = "1.6"
